--- a/tool.html
+++ b/tool.html
@@ -234,6 +234,34 @@
     function generateMarkdown() {
       const dayOfWeek = document.getElementById("checkInTitle").textContent;
 
+      // Yesterday’s Top 3 Review
+      const yesterdayTask1 = document.getElementById("yesterdayTask1").value.trim();
+      const yesterdayTask1Completed = document.getElementById("yesterdayTask1Completed").checked ? "✅ Completed" : "❌ Not Completed";
+      const yesterdayTask1Reason = document.getElementById("yesterdayTask1Reason").value.trim();
+
+      const yesterdayTask2 = document.getElementById("yesterdayTask2").value.trim();
+      const yesterdayTask2Completed = document.getElementById("yesterdayTask2Completed").checked ? "✅ Completed" : "❌ Not Completed";
+      const yesterdayTask2Reason = document.getElementById("yesterdayTask2Reason").value.trim();
+
+      const yesterdayTask3 = document.getElementById("yesterdayTask3").value.trim();
+      const yesterdayTask3Completed = document.getElementById("yesterdayTask3Completed").checked ? "✅ Completed" : "❌ Not Completed";
+      const yesterdayTask3Reason = document.getElementById("yesterdayTask3Reason").value.trim();
+
+      const yesterdayReview = `#### Yesterday's Top 3 Review\n- Task 1: ${yesterdayTask1} (${yesterdayTask1Completed})${yesterdayTask1Reason ? ` - Reason: ${yesterdayTask1Reason}` : ""}\n- Task 2: ${yesterdayTask2} (${yesterdayTask2Completed})${yesterdayTask2Reason ? ` - Reason: ${yesterdayTask2Reason}` : ""}\n- Task 3: ${yesterdayTask3} (${yesterdayTask3Completed})${yesterdayTask3Reason ? ` - Reason: ${yesterdayTask3Reason}` : ""}`;
+
+      // Top 3 for Tomorrow
+      const tomorrowTask1 = document.getElementById("tomorrowTask1").value.trim();
+      const tomorrowTask1Description = document.getElementById("tomorrowTask1Description").value.trim();
+
+      const tomorrowTask2 = document.getElementById("tomorrowTask2").value.trim();
+      const tomorrowTask2Description = document.getElementById("tomorrowTask2Description").value.trim();
+
+      const tomorrowTask3 = document.getElementById("tomorrowTask3").value.trim();
+      const tomorrowTask3Description = document.getElementById("tomorrowTask3Description").value.trim();
+
+      const tomorrowTasks = `#### Top 3 for Tomorrow\n- Task 1: ${tomorrowTask1} ${tomorrowTask1Description ? ` - ${tomorrowTask1Description}` : ""}\n- Task 2: ${tomorrowTask2} ${tomorrowTask2Description ? ` - ${tomorrowTask2Description}` : ""}\n- Task 3: ${tomorrowTask3} ${tomorrowTask3Description ? ` - ${tomorrowTask3Description}` : ""}`;
+
+      // Wins, Challenges, and Self-Reflections
       const wins = Array.from(document.getElementsByName("wins")).map(win => win.value.trim()).filter(Boolean);
       const winsFormat = document.getElementById("winsFormat").value;
       const formattedWins = formatList(wins, winsFormat);
@@ -246,11 +274,33 @@
       const selfReflectionsFormat = document.getElementById("selfReflectionsFormat").value;
       const formattedReflections = formatList(selfReflections, selfReflectionsFormat);
 
-      const markdown = `${dayOfWeek}\n\n#### Wins\n${formattedWins}\n\n#### Challenges\n${formattedChallenges}\n\n#### Self-Reflections\n${formattedReflections}`;
+      // Day Score
+      const dayScore = document.getElementById("dayScore").value;
 
+      // Habit Tracker
+      const habits = [
+        { id: "meditation", label: "Meditation" },
+        { id: "workout", label: "Workout" },
+        { id: "healthyEating", label: "Healthy Eating" },
+        { id: "water", label: "Drink 2L+ Water" },
+        { id: "read", label: "Read 10 Pages" },
+        { id: "podcast", label: "Podcast" }
+      ];
+      const habitStatus = habits.map(habit => `${habit.label}: ${document.getElementById(habit.id).checked ? "✅" : "❌"}`).join("\n");
+
+      // Podcast Section (only if Podcast is checked)
+      const podcastChecked = document.getElementById("podcast").checked;
+      const podcastDetails = podcastChecked ? `\n- **Podcast Title**: ${document.getElementById("podcastTitle").value.trim()}\n- **Podcast Notes**: ${document.getElementById("podcastNotes").value.trim()}` : "";
+
+      // Gratitude
+      const gratitude = document.getElementById("gratitude").value.trim();
+
+      // Compile everything into Markdown
+      const markdown = `${dayOfWeek}\n\n${yesterdayReview}\n\n${tomorrowTasks}\n\n#### Wins\n${formattedWins}\n\n#### Challenges\n${formattedChallenges}\n\n#### Self-Reflections\n${formattedReflections}\n\n#### Day Score\n- ${dayScore}/10\n\n#### Habit Tracker\n${habitStatus}${podcastDetails}\n\n#### Gratitude\n${gratitude}`;
+
+      // Copy to clipboard and show notification
       navigator.clipboard.writeText(markdown).then(() => {
         showNotification();
-        clearCookies();
       }).catch(console.error);
     }
   </script>
