--- a/Daily Updates/tool.html
+++ b/Daily Updates/tool.html
@@ -143,8 +143,11 @@
 
       const deleteButton = document.createElement("button");
       deleteButton.type = "button";
-      deleteButton.innerHTML = "&#10006;";
-      deleteButton.className = "ml-2 text-red-500 font-bold";
+      deleteButton.className = "ml-2 text-red-500";
+      deleteButton.innerHTML = `
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+          <path d="M6 2a2 2 0 00-2 2v1H3a1 1 0 100 2h14a1 1 0 100-2h-1V4a2 2 0 00-2-2H6zM5 9a1 1 0 011-1h8a1 1 0 011 1v7a2 2 0 01-2 2H7a2 2 0 01-2-2V9z" />
+        </svg>`;
       deleteButton.onclick = () => {
         div.remove();
         saveToCookies();
