--- a/Daily_Updates/daily.html
+++ b/Daily_Updates/daily.html
@@ -112,174 +112,166 @@
         <textarea id="gratitude" placeholder="List things you're grateful for..." class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring" oninput="saveToCookies()"></textarea>
       </div>
 
-      <button type="button" onclick="generateMarkdown()" class="w-full bg-green-500 text-white font-bold py-2 px-4 rounded-lg hover:bg-green-600 focus:outline-none focus:ring">Copy Markdown</button>
+      <button type="button" onclick="generateSlackMarkdown()" class="w-full bg-green-500 text-white font-bold py-2 px-4 rounded-lg hover:bg-green-600 focus:outline-none focus:ring">Copy Markdown</button>
     </form>
 
     <div id="copyNotification" class="fixed top-4 right-4 bg-green-500 text-white font-semibold py-2 px-4 rounded shadow-lg hidden">Copied to clipboard!</div>
   </div>
 
   <script>
-function setDayInTitle() {
-  const options = { weekday: "long", year: "numeric", month: "long", day: "numeric" };
-  const today = new Date();
-  document.getElementById("checkInTitle").textContent = `Daily Check-In - ${today.toLocaleDateString("en-US", options)}`;
-}
-setDayInTitle();
-
-function addReflectionField(containerId, sectionType) {
-  const container = document.getElementById(containerId);
-  const div = document.createElement("div");
-  div.className = "flex items-center mb-2";
-
-  const input = document.createElement("textarea");
-  input.placeholder = `Add ${sectionType.charAt(0).toUpperCase() + sectionType.slice(1)}...`;
-  input.className = "w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring";
-  input.name = sectionType;
-  input.oninput = saveToCookies;
-
-  const deleteButton = document.createElement("button");
-  deleteButton.type = "button";
-  deleteButton.className = "ml-2 text-red-500";
-  deleteButton.innerHTML = `
-    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-      <path d="M6 2a2 2 0 00-2 2v1H3a1 1 0 100 2h14a1 1 0 100-2h-1V4a2 2 0 00-2-2H6zM5 9a1 1 0 011-1h8a1 1 0 011 1v7a2 2 0 01-2 2H7a2 2 0 01-2-2V9z" />
-    </svg>`;
-  deleteButton.onclick = () => {
-    div.remove();
-    saveToCookies();
-  };
-
-  div.appendChild(input);
-  div.appendChild(deleteButton);
-  container.appendChild(div);
-  saveToCookies();
-}
-
-function toggleReason(taskNumber) {
-  const checkbox = document.getElementById(`yesterdayTask${taskNumber}Completed`);
-  const reasonTextarea = document.getElementById(`yesterdayTask${taskNumber}Reason`);
-  reasonTextarea.classList.toggle("hidden", checkbox.checked);
-  saveToCookies();
-}
-
-function togglePodcastSection() {
-  document.getElementById("podcastSection").classList.toggle("hidden", !document.getElementById("podcast").checked);
-}
-
-function updateDayScore() {
-  document.getElementById("dayScoreValue").textContent = document.getElementById("dayScore").value;
-}
-
-function saveToCookies() {
-  const fields = document.querySelectorAll("#checkinForm input, #checkinForm textarea, #checkinForm select");
-  fields.forEach(field => {
-    document.cookie = `${field.id}=${encodeURIComponent(field.value)}; path=/;`;
-  });
-}
-
-function loadFromCookies() {
-  const cookies = document.cookie.split("; ").reduce((acc, cookie) => {
-    const [name, value] = cookie.split("=");
-    acc[name] = decodeURIComponent(value);
-    return acc;
-  }, {});
-
-  for (let id in cookies) {
-    const field = document.getElementById(id);
-    if (field) {
-      if (field.type === "checkbox") field.checked = cookies[id] === "true";
-      else field.value = cookies[id];
+    function setDayInTitle() {
+      const options = { weekday: "long", year: "numeric", month: "long", day: "numeric" };
+      const today = new Date();
+      document.getElementById("checkInTitle").textContent = `Daily Check-In - ${today.toLocaleDateString("en-US", options)}`;
     }
-  }
-}
+    setDayInTitle();
 
-function clearCookies() {
-  const fields = document.querySelectorAll("#checkinForm input, #checkinForm textarea, #checkinForm select");
-  fields.forEach(field => {
-    document.cookie = `${field.id}=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;`;
-  });
-}
+    function addReflectionField(containerId, sectionType) {
+      const container = document.getElementById(containerId);
+      const div = document.createElement("div");
+      div.className = "flex items-center mb-2";
 
-loadFromCookies();
+      const input = document.createElement("textarea");
+      input.placeholder = `Add ${sectionType.charAt(0).toUpperCase() + sectionType.slice(1)}...`;
+      input.className = "w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring";
+      input.name = sectionType;
+      input.oninput = saveToCookies;
 
-function formatList(items, formatType) {
-  return items.map((item, index) => formatType === "numbered" ? `${index + 1}. ${item}` : `- ${item}`).join("\n");
-}
+      const deleteButton = document.createElement("button");
+      deleteButton.type = "button";
+      deleteButton.className = "ml-2 text-red-500";
+      deleteButton.innerHTML = `
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+          <path d="M6 2a2 2 0 00-2 2v1H3a1 1 0 100 2h14a1 1 0 100-2h-1V4a2 2 0 00-2-2H6zM5 9a1 1 0 011-1h8a1 1 0 011 1v7a2 2 0 01-2 2H7a2 2 0 01-2-2V9z" />
+        </svg>`;
+      deleteButton.onclick = () => {
+        div.remove();
+        saveToCookies();
+      };
 
-function showNotification(message = "Copied to clipboard!") {
-  const notification = document.getElementById("copyNotification");
-  notification.textContent = message;
-  notification.classList.remove("hidden");
-  setTimeout(() => notification.classList.add("hidden"), 2000);
-}
+      div.appendChild(input);
+      div.appendChild(deleteButton);
+      container.appendChild(div);
+      saveToCookies();
+    }
 
-function generateMarkdown() {
-  const dayOfWeek = document.getElementById("checkInTitle").textContent;
+    function toggleReason(taskNumber) {
+      const checkbox = document.getElementById(`yesterdayTask${taskNumber}Completed`);
+      const reasonTextarea = document.getElementById(`yesterdayTask${taskNumber}Reason`);
+      reasonTextarea.classList.toggle("hidden", checkbox.checked);
+      saveToCookies();
+    }
 
-  const yesterdayTask1 = document.getElementById("yesterdayTask1").value.trim();
-  const yesterdayTask1Completed = document.getElementById("yesterdayTask1Completed").checked ? "✅ Completed" : "❌ Not Completed";
-  const yesterdayTask1Reason = document.getElementById("yesterdayTask1Reason").value.trim();
+    function togglePodcastSection() {
+      document.getElementById("podcastSection").classList.toggle("hidden", !document.getElementById("podcast").checked);
+    }
 
-  const yesterdayTask2 = document.getElementById("yesterdayTask2").value.trim();
-  const yesterdayTask2Completed = document.getElementById("yesterdayTask2Completed").checked ? "✅ Completed" : "❌ Not Completed";
-  const yesterdayTask2Reason = document.getElementById("yesterdayTask2Reason").value.trim();
+    function updateDayScore() {
+      document.getElementById("dayScoreValue").textContent = document.getElementById("dayScore").value;
+    }
 
-  const yesterdayTask3 = document.getElementById("yesterdayTask3").value.trim();
-  const yesterdayTask3Completed = document.getElementById("yesterdayTask3Completed").checked ? "✅ Completed" : "❌ Not Completed";
-  const yesterdayTask3Reason = document.getElementById("yesterdayTask3Reason").value.trim();
+    function saveToCookies() {
+      const fields = document.querySelectorAll("#checkinForm input, #checkinForm textarea, #checkinForm select");
+      fields.forEach(field => {
+        document.cookie = `${field.id}=${encodeURIComponent(field.value)}; path=/;`;
+      });
+    }
 
-  const yesterdayReview = `#### Yesterday's Top 3 Review\n- Task 1: ${yesterdayTask1} (${yesterdayTask1Completed})${yesterdayTask1Reason ? ` - Reason: ${yesterdayTask1Reason}` : ""}\n- Task 2: ${yesterdayTask2} (${yesterdayTask2Completed})${yesterdayTask2Reason ? ` - Reason: ${yesterdayTask2Reason}` : ""}\n- Task 3: ${yesterdayTask3} (${yesterdayTask3Completed})${yesterdayTask3Reason ? ` - Reason: ${yesterdayTask3Reason}` : ""}`;
+    function loadFromCookies() {
+      const cookies = document.cookie.split("; ").reduce((acc, cookie) => {
+        const [name, value] = cookie.split("=");
+        acc[name] = decodeURIComponent(value);
+        return acc;
+      }, {});
 
-  const tomorrowTask1 = document.getElementById("tomorrowTask1").value.trim();
-  const tomorrowTask1Description = document.getElementById("tomorrowTask1Description").value.trim();
+      for (let id in cookies) {
+        const field = document.getElementById(id);
+        if (field) {
+          if (field.type === "checkbox") field.checked = cookies[id] === "true";
+          else field.value = cookies[id];
+        }
+      }
+    }
 
-  const tomorrowTask2 = document.getElementById("tomorrowTask2").value.trim();
-  const tomorrowTask2Description = document.getElementById("tomorrowTask2Description").value.trim();
+    function clearCookies() {
+      const fields = document.querySelectorAll("#checkinForm input, #checkinForm textarea, #checkinForm select");
+      fields.forEach(field => {
+        document.cookie = `${field.id}=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;`;
+      });
+    }
 
-  const tomorrowTask3 = document.getElementById("tomorrowTask3").value.trim();
-  const tomorrowTask3Description = document.getElementById("tomorrowTask3Description").value.trim();
+    loadFromCookies();
 
-  const tomorrowTasks = `#### Top 3 for Tomorrow\n- Task 1: ${tomorrowTask1} ${tomorrowTask1Description ? ` - ${tomorrowTask1Description}` : ""}\n- Task 2: ${tomorrowTask2} ${tomorrowTask2Description ? ` - ${tomorrowTask2Description}` : ""}\n- Task 3: ${tomorrowTask3} ${tomorrowTask3Description ? ` - ${tomorrowTask3Description}` : ""}`;
+    function formatList(items, formatType) {
+      return items.map((item, index) => formatType === "numbered" ? `${index + 1}. ${item}` : `- ${item}`).join("\n");
+    }
 
-  const wins = Array.from(document.getElementsByName("wins")).map(win => win.value.trim()).filter(Boolean);
-  const winsFormat = document.getElementById("winsFormat").value;
-  const formattedWins = formatList(wins, winsFormat);
+    function showNotification(message = "Copied to clipboard!") {
+      const notification = document.getElementById("copyNotification");
+      notification.textContent = message;
+      notification.classList.remove("hidden");
+      setTimeout(() => notification.classList.add("hidden"), 2000);
+    }
 
-  const challenges = Array.from(document.getElementsByName("challenges")).map(challenge => challenge.value.trim()).filter(Boolean);
-  const challengesFormat = document.getElementById("challengesFormat").value;
-  const formattedChallenges = formatList(challenges, challengesFormat);
+    function generateSlackMarkdown() {
+      const dayOfWeek = document.getElementById("checkInTitle").textContent;
 
-  const selfReflections = Array.from(document.getElementsByName("selfReflection")).map(reflection => reflection.value.trim()).filter(Boolean);
-  const selfReflectionsFormat = document.getElementById("selfReflectionsFormat").value;
-  const formattedReflections = formatList(selfReflections, selfReflectionsFormat);
+      const yesterdayTask1 = document.getElementById("yesterdayTask1").value.trim();
+      const yesterdayTask1Completed = document.getElementById("yesterdayTask1Completed").checked ? ":white_check_mark: Completed" : ":x: Not Completed";
+      const yesterdayTask1Reason = document.getElementById("yesterdayTask1Reason").value.trim();
 
-  const dayScore = document.getElementById("dayScore").value;
+      const yesterdayTask2 = document.getElementById("yesterdayTask2").value.trim();
+      const yesterdayTask2Completed = document.getElementById("yesterdayTask2Completed").checked ? ":white_check_mark: Completed" : ":x: Not Completed";
+      const yesterdayTask2Reason = document.getElementById("yesterdayTask2Reason").value.trim();
 
-  const habits = [
-    { id: "meditation", label: "Meditation" },
-    { id: "workout", label: "Workout" },
-    { id: "healthyEating", label: "Healthy Eating" },
-    { id: "water", label: "Drink 2L+ Water" },
-    { id: "read", label: "Read 10 Pages" },
-    { id: "podcast", label: "Podcast" }
-  ];
-  const habitStatus = habits.map(habit => `${habit.label}: ${document.getElementById(habit.id).checked ? "✅" : "❌"}`).join("\n");
+      const yesterdayTask3 = document.getElementById("yesterdayTask3").value.trim();
+      const yesterdayTask3Completed = document.getElementById("yesterdayTask3Completed").checked ? ":white_check_mark: Completed" : ":x: Not Completed";
+      const yesterdayTask3Reason = document.getElementById("yesterdayTask3Reason").value.trim();
 
-  const podcastChecked = document.getElementById("podcast").checked;
-  const podcastDetails = podcastChecked ? `\n- **Podcast Title**: ${document.getElementById("podcastTitle").value.trim()}\n- **Podcast Notes**: ${document.getElementById("podcastNotes").value.trim()}` : "";
+      const yesterdayReview = `*Yesterday's Top 3 Review:*\n• Task 1: *${yesterdayTask1}* (${yesterdayTask1Completed})${yesterdayTask1Reason ? ` - _Reason: ${yesterdayTask1Reason}_` : ""}\n• Task 2: *${yesterdayTask2}* (${yesterdayTask2Completed})${yesterdayTask2Reason ? ` - _Reason: ${yesterdayTask2Reason}_` : ""}\n• Task 3: *${yesterdayTask3}* (${yesterdayTask3Completed})${yesterdayTask3Reason ? ` - _Reason: ${yesterdayTask3Reason}_` : ""}`;
 
-  const gratitude = document.getElementById("gratitude").value.trim();
+      const tomorrowTask1 = document.getElementById("tomorrowTask1").value.trim();
+      const tomorrowTask1Description = document.getElementById("tomorrowTask1Description").value.trim();
 
-  const markdown = `${dayOfWeek}\n\n${yesterdayReview}\n\n${tomorrowTasks}\n\n#### Wins\n${formattedWins}\n\n#### Challenges\n${formattedChallenges}\n\n#### Self-Reflections\n${formattedReflections}\n\n#### Day Score\n- ${dayScore}/10\n\n#### Habit Tracker\n${habitStatus}${podcastDetails}\n\n#### Gratitude\n${gratitude}`;
+      const tomorrowTask2 = document.getElementById("tomorrowTask2").value.trim();
+      const tomorrowTask2Description = document.getElementById("tomorrowTask2Description").value.trim();
 
-  navigator.clipboard.writeText(markdown).then(() => {
-    showNotification();
-  }).catch(console.error);
-}
+      const tomorrowTask3 = document.getElementById("tomorrowTask3").value.trim();
+      const tomorrowTask3Description = document.getElementById("tomorrowTask3Description").value.trim();
 
-function generateSlackMarkdown() {
-  generateMarkdown();
-}
+      const tomorrowTasks = `*Top 3 for Tomorrow:*\n• Task 1: *${tomorrowTask1}*${tomorrowTask1Description ? ` - _${tomorrowTask1Description}_` : ""}\n• Task 2: *${tomorrowTask2}*${tomorrowTask2Description ? ` - _${tomorrowTask2Description}_` : ""}\n• Task 3: *${tomorrowTask3}*${tomorrowTask3Description ? ` - _${tomorrowTask3Description}_` : ""}`;
+
+      const wins = Array.from(document.getElementsByName("wins")).map(win => `• ${win.value.trim()}`).join("\n");
+      const challenges = Array.from(document.getElementsByName("challenges")).map(challenge => `• ${challenge.value.trim()}`).join("\n");
+      const selfReflections = Array.from(document.getElementsByName("selfReflection")).map(reflection => `• ${reflection.value.trim()}`).join("\n");
+
+      const dayScore = document.getElementById("dayScore").value;
+
+      const habits = [
+        { id: "meditation", label: "Meditation" },
+        { id: "workout", label: "Workout" },
+        { id: "healthyEating", label: "Healthy Eating" },
+        { id: "water", label: "Drink 2L+ Water" },
+        { id: "read", label: "Read 10 Pages" },
+        { id: "podcast", label: "Podcast" }
+      ];
+      const habitStatus = habits
+        .map(habit => `• ${habit.label}: ${document.getElementById(habit.id).checked ? ":white_check_mark:" : ":x:"}`)
+        .join("\n");
+
+      const podcastChecked = document.getElementById("podcast").checked;
+      const podcastDetails = podcastChecked
+        ? `\n• *Podcast Title:* ${document.getElementById("podcastTitle").value.trim()}\n• *Podcast Notes:* ${document.getElementById("podcastNotes").value.trim()}`
+        : "";
+
+      const gratitude = document.getElementById("gratitude").value.trim().split("\n").map(item => `• ${item}`).join("\n");
+
+      const slackMarkdown = `${dayOfWeek}\n\n${yesterdayReview}\n\n${tomorrowTasks}\n\n*Wins:*\n${wins}\n\n*Challenges:*\n${challenges}\n\n*Self-Reflections:*\n${selfReflections}\n\n*Day Score:*\n• ${dayScore}/10\n\n*Habit Tracker:*\n${habitStatus}${podcastDetails}\n\n*Gratitude:*\n${gratitude}`;
+
+      navigator.clipboard.writeText(slackMarkdown).then(() => {
+        showNotification("Slack Markdown copied!");
+      }).catch(console.error);
+    }
   </script>
 </body>
 </html>
