--- a/Daily_Updates/daily.html
+++ b/Daily_Updates/daily.html
@@ -100,7 +100,7 @@
           <label><input type="checkbox" id="podcast" onchange="togglePodcastSection(); saveToCookies()"> 🎧 Podcast</label>
           <label class="flex items-center space-x-2">
             <input type="checkbox" id="duolingo" onchange="saveToCookies()"> 
-            <img src="/assets/duolingo.png" alt="Duolingo Logo" class="h-6 w-6 rounded">
+            <img src="/Daily_Updates/assets/duolingo.png" alt="Duolingo Logo" class="h-6 w-6 rounded">
             <span>Duolingo</span>
           </label>
         </div>
