--- a/Daily_Updates/daily.html
+++ b/Daily_Updates/daily.html
@@ -5,10 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Daily Check-In</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <script src="/Daily_Updates/assets/saveData.js"></script>
 </head>
 <body class="bg-gray-100 flex items-center justify-center min-h-screen relative">
   <div class="container mx-auto max-w-lg bg-white rounded-lg shadow-lg p-8">
     <h2 id="checkInTitle" class="text-2xl font-bold mb-4 text-center">Daily Check-In</h2>
+
+<button id="openModal" class="absolute top-4 right-4 bg-white p-2 rounded-full shadow-md hover:shadow-lg focus:outline-none">
+  <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-600 hover:text-gray-800" viewBox="0 0 20 20" fill="currentColor">
+    <path fill-rule="evenodd" d="M10 2a1 1 0 01.832.445l.967 1.45a1 1 0 00.742.428l1.68.246a1 1 0 01.554 1.704l-1.216 1.217a1 1 0 00-.28.878l.272 1.634a1 1 0 01-1.45 1.054L10 9.908l-1.45.762a1 1 0 01-1.45-1.054l.272-1.634a1 1 0 00-.28-.878L6.876 6.273a1 1 0 01.554-1.704l1.68-.246a1 1 0 00.742-.428l.967-1.45A1 1 0 0110 2zm0 2.75l-.538.806a3 3 0 01-2.226 1.285l-1.682.247.963.964a3 3 0 01.842 2.621l-.272 1.633 1.633-.86a3 3 0 012.788 0l1.633.86-.272-1.633a3 3 0 01.842-2.621l.963-.964-1.682-.247a3 3 0 01-2.226-1.285L10 4.75z" clip-rule="evenodd"/>
+    <path d="M12 10a2 2 0 11-4 0 2 2 0 014 0z"/>
+  </svg>
+</button>
+<div id="clearDataModal" class="fixed inset-0 bg-gray-800 bg-opacity-50 flex items-center justify-center hidden">
+  <div class="bg-white p-6 rounded-lg shadow-lg max-w-sm w-full">
+    <h2 class="text-lg font-semibold text-gray-700 mb-4">Clear All Saved Data</h2>
+    <p class="text-gray-600 mb-6">Are you sure you want to clear all saved data? This action cannot be undone.</p>
+    <div class="flex justify-end space-x-4">
+      <button id="closeModal" class="px-4 py-2 bg-gray-300 rounded-lg hover:bg-gray-400 focus:outline-none">Cancel</button>
+      <button id="confirmClear" class="px-4 py-2 bg-red-500 text-white rounded-lg hover:bg-red-600 focus:outline-none">Clear</button>
+    </div>
+  </div>
+</div>
 
     <form id="checkinForm" class="space-y-4">
       <div>
