--- a/Daily_Updates/daily.html
+++ b/Daily_Updates/daily.html
@@ -6,6 +6,7 @@
   <title>Daily Check-In</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <script src="/Daily_Updates/assets/saveData.js"></script>
+  <script src="/Daily_Updates/assets/modal.js"></script>
 </head>
 <button id="openModal" class="absolute top-4 right-4 bg-white p-2 rounded-full shadow-md hover:shadow-lg focus:outline-none">
   <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-600 hover:text-gray-800" viewBox="0 0 20 20" fill="currentColor">
