updated svg for setting gear icon

--- a/Daily_Updates/daily.html
+++ b/Daily_Updates/daily.html
@@ -140,10 +140,32 @@
 
 </head>
 <button id="gearButton" class="absolute top-4 right-4 text-gray-500 hover:text-gray-700 focus:outline-none transition transform hover:scale-105">
-  <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 p-2 bg-white rounded-full shadow-lg hover:shadow-xl" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2a10 10 0 100 20 10 10 0 000-20zm0 2v2m6.36-1.36l-1.42 1.42M18 12h-2m-1.36 6.36l1.42 1.42M12 18v2m-6.36-1.36l1.42-1.42M6 12H4m1.36-6.36L4 4.64M12 6a6 6 0 100 12 6 6 0 000-12z" />
+  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+       class="h-10 w-10 p-2 bg-white rounded-full shadow-lg hover:shadow-xl"
+       viewBox="0 0 128 128" style="enable-background:new 0 0 128 128;" xml:space="preserve">
+    <g>
+      <path style="fill:#82AEC0;" d="M124,71.85v-15.7c0-0.59-0.45-1.09-1.03-1.15l-17.83-1.89c-0.47-0.05-0.85-0.38-0.98-0.83
+        c-0.86-2.95-2.03-5.76-3.48-8.39c-0.23-0.41-0.19-0.92,0.11-1.28l11.28-13.94c0.37-0.46,0.34-1.13-0.08-1.54l-11.1-11.1
+        c-0.42-0.42-1.08-0.45-1.54-0.08L85.39,27.22c-0.37,0.3-0.87,0.33-1.28,0.11c-2.64-1.45-5.45-2.62-8.39-3.48
+        c-0.45-0.13-0.78-0.51-0.83-0.98L73,5.03C72.94,4.45,72.44,4,71.85,4h-15.7C55.56,4,55.06,4.45,55,5.03l-1.89,17.83
+        c-0.05,0.47-0.38,0.85-0.83,0.98c-2.95,0.86-5.76,2.03-8.39,3.48c-0.41,0.23-0.92,0.19-1.28-0.11L28.67,15.94
+        c-0.46-0.37-1.13-0.34-1.54,0.08l-11.1,11.1c-0.42,0.42-0.45,1.08-0.08,1.54l11.28,13.94c0.3,0.37,0.33,0.87,0.11,1.28
+        c-1.45,2.64-2.62,5.45-3.48,8.39c-0.13,0.45-0.51,0.78-0.98,0.83L5.03,55C4.45,55.06,4,55.56,4,56.15v15.7
+        c0,0.59,0.45,1.09,1.03,1.15l17.83,1.89c0.47,0.05,0.85,0.38,0.98,0.83c0.86,2.95,2.03,5.76,3.48,8.39
+        c0.23,0.41,0.19,0.92-0.11,1.28L15.94,99.33c-0.37,0.46-0.34,1.13,0.08,1.54l11.1,11.1c0.42,0.42,1.08,0.45,1.54,0.08l13.94-11.28
+        c0.37-0.3,0.87-0.33,1.28-0.11c2.64,1.45,5.45,2.62,8.39,3.48c0.45,0.13,0.78,0.51,0.83,0.98L55,122.97
+        c0.06,0.59,0.56,1.03,1.15,1.03h15.7c0.59,0,1.09-0.45,1.15-1.03l1.89-17.83c0.05-0.47,0.38-0.85,0.83-0.98
+        c2.95-0.86,5.76-2.03,8.39-3.48c0.41-0.23,0.92-0.19,1.28,0.11l13.94,11.28c0.46,0.37,1.13,0.34,1.54-0.08l11.1-11.1
+        c0.42-0.42,0.45-1.08,0.08-1.54l-11.28-13.94c-0.3-0.37-0.33-0.87-0.11-1.28c1.45-2.64,2.62-5.45,3.48-8.39
+        c0.13-0.45,0.51-0.78,0.98-0.83L122.97,73C123.55,72.94,124,72.44,124,71.85z M64,75.28c-6.23,0-11.28-5.05-11.28-11.28
+        S57.77,52.72,64,52.72S75.28,57.77,75.28,64S70.23,75.28,64,75.28z"/>
+      <path style="fill:#2F7889;" d="M80.56,49.48c3.67,4.18,5.78,9.77,5.43,15.85c-0.65,11.16-9.83,20.19-21,20.68
+        c-4.75,0.21-9.18-1.09-12.86-3.45c-0.28-0.18-0.58,0.2-0.34,0.44c4.46,4.55,10.85,7.22,17.85,6.67
+        c10.78-0.85,19.56-9.5,20.55-20.27c0.77-8.36-3.06-15.87-9.23-20.33C80.67,48.87,80.34,49.22,80.56,49.48z"/>
+    </g>
   </svg>
 </button>
+
 
 <div id="clearDataModal" class="hidden fixed inset-0 bg-gray-600 bg-opacity-50 flex items-center justify-center">
   <div class="bg-white rounded-lg p-6 shadow-lg">
