updated animation of settings gear

--- a/Daily_Updates/daily.html
+++ b/Daily_Updates/daily.html
@@ -11,7 +11,7 @@
 </head>
 
 <button id="gearButton" class="absolute top-4 right-4 text-gray-500 hover:text-gray-700 focus:outline-none transition transform hover:scale-105">
-  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
        class="h-10 w-10 p-2 bg-white rounded-full shadow-lg hover:shadow-xl"
        viewBox="0 0 128 128" style="enable-background:new 0 0 128 128;" xml:space="preserve">
     <g>
@@ -33,6 +33,7 @@
     </g>
   </svg>
 </button>
+
 
 <div id="clearDataModal" class="hidden fixed inset-0 bg-gray-600 bg-opacity-50 flex items-center justify-center">
   <div class="bg-white rounded-lg p-6 shadow-lg">
@@ -352,4 +353,5 @@ navigator.clipboard.writeText(slackMarkdown).then(() => {
 }).catch(console.error);
 }</script>
 </body>
+
 </html>
