--- a/Daily_Updates/daily.html
+++ b/Daily_Updates/daily.html
@@ -47,7 +47,7 @@
 </div>
 
 
-  <body class="bg-gray-100 flex items-center justify-center min-h-screen relative">
+<body class="bg-gray-100 min-h-screen flex flex-col">
   <div class="container mx-auto max-w-lg bg-white rounded-lg shadow-lg p-8">
     <h2 id="checkInTitle" class="text-2xl font-bold mb-4 text-center">Daily Check-In</h2>
 <form id="checkinForm" class="space-y-4">
@@ -169,7 +169,24 @@
 
     <div id="copyNotification" class="fixed top-4 right-4 bg-green-500 text-white font-semibold py-2 px-4 rounded shadow-lg hidden">Copied to clipboard!</div>
   </div>
-  <script>function setDayInTitle() {
+  <footer class="bg-gray-800 text-white py-4 w-full">
+    <div class="container mx-auto flex flex-col sm:flex-row justify-between items-center px-4">
+      <p class="text-sm text-gray-400 mb-2 sm:mb-0">
+        Made with ❤️ and open-source contributions.
+      </p>
+      <div class="flex items-center space-x-4">
+        <a href="https://github.com/Gabriel-Dalton/velocity-tracker-tks" target="_blank" class="hover:text-gray-300 flex items-center space-x-2">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 24 24" fill="currentColor">
+            <path d="M12 0C5.372 0 0 5.372 0 12c0 5.303 3.438 9.8 8.207 11.387.6.111.793-.261.793-.577 0-.285-.011-1.24-.017-2.247-3.338.724-4.042-1.416-4.042-1.416-.546-1.387-1.333-1.755-1.333-1.755-1.089-.744.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.835 2.809 1.304 3.492.997.108-.775.418-1.305.761-1.604-2.665-.303-5.467-1.334-5.467-5.931 0-1.31.469-2.381 1.236-3.221-.124-.303-.535-1.521.117-3.171 0 0 1.009-.323 3.301 1.23.957-.266 1.984-.399 3.005-.404 1.02.005 2.047.138 3.005.404 2.291-1.553 3.299-1.23 3.299-1.23.653 1.65.242 2.868.118 3.171.77.84 1.235 1.911 1.235 3.221 0 4.608-2.807 5.625-5.479 5.921.429.369.812 1.096.812 2.207 0 1.594-.014 2.875-.014 3.267 0 .319.192.694.799.577C20.565 21.797 24 17.303 24 12c0-6.628-5.372-12-12-12z" />
+          </svg>
+          <span>View on GitHub</span>
+        </a>
+      </div>
+    </div>
+  </footer>
+  
+</body>
+<script>function setDayInTitle() {
     const options = { weekday: "long", year: "numeric", month: "long", day: "numeric" };
     const today = new Date();
     document.getElementById("checkInTitle").textContent = `Daily Check-In - ${today.toLocaleDateString("en-US", options)}`;
@@ -352,6 +369,4 @@ navigator.clipboard.writeText(slackMarkdown).then(() => {
   showNotification("Slack Markdown copied!");
 }).catch(console.error);
 }</script>
-</body>
-
 </html>
