--- a/Daily_Updates/daily.html
+++ b/Daily_Updates/daily.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Daily Check-In</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <script src="/Daily_Updates/assets/main.js"></script>
-<script src="/Daily_Updates/assets/settings.js"></script>
-<link href="/Daily_Updates/assets/settings.css" rel="stylesheet">
+  <script src="./Daily_Updates/assets/main.js"></script>
+<script src="./Daily_Updates/assets/settings.js"></script>
+<link href="./Daily_Updates/assets/settings.css" rel="stylesheet">
 </head>
 
 <button id="gearButton" class="absolute top-4 right-4 text-gray-500 hover:text-gray-700 focus:outline-none transition transform hover:scale-105">
