--- a/Daily_Updates/formatter.html
+++ b/Daily_Updates/formatter.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Slack Markdown Formatter</title>
+  <title>Slack to Dropbox Paper Formatter</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-gray-100 min-h-screen flex items-center justify-center">
   <div class="container mx-auto max-w-2xl bg-white rounded-lg shadow-lg p-6">
-    <h1 class="text-2xl font-bold mb-4 text-center">Slack Markdown Formatter</h1>
+    <h1 class="text-2xl font-bold mb-4 text-center">Slack to Dropbox Paper Formatter</h1>
     <textarea id="slackInput" placeholder="Paste your Slack markdown here..." 
               class="w-full h-48 p-3 border rounded-lg focus:outline-none focus:ring mb-4"></textarea>
     <button id="formatButton" 
@@ -24,19 +24,39 @@
       ":arrows_counterclockwise:": "🔄",
       ":heart:": "❤️",
       ":star:": "⭐",
-      ":clap:": "👏",
+      ":clap:": "👏"
     };
 
-    function replaceSlackEmojis(text) {
-      return text.replace(/:\w+:/g, match => emojiMap[match] || match);
+    function formatSlackToDropbox(text) {
+      const replacedText = text.replace(/:\w+:/g, match => emojiMap[match] || match);
+
+      const formattedText = replacedText
+        // Bold section headings
+        .replace(/^(Yesterday's Top 3 Review|Top 3 for Tomorrow|Wins|Challenges|Self-Reflections|Day Score|Habit Tracker|Gratitude):/gm, "**$1:**")
+        // Bold task names and descriptions
+        .replace(/• Task (\d+): (.*?)( - .*?)?/g, "• **Task $1:** $2$3")
+        // Remove bullet points from Day Score and Habit Tracker
+        .replace(/^\• (Day Score:|Habit Tracker:)/gm, "$1")
+        // Number Wins and Challenges
+        .replace(/^Wins:\n(?:- (.*)\n)+/gm, (match) => {
+          const items = match.trim().split("\n").map((line, index) => `${index + 1}. ${line.slice(2)}`);
+          return `**Wins:**\n${items.join("\n")}`;
+        })
+        .replace(/^Challenges:\n(?:- (.*)\n)+/gm, (match) => {
+          const items = match.trim().split("\n").map((line, index) => `${index + 1}. ${line.slice(2)}`);
+          return `**Challenges:**\n${items.join("\n")}`;
+        });
+
+      return formattedText;
     }
 
     document.getElementById("formatButton").addEventListener("click", () => {
       const input = document.getElementById("slackInput").value;
-      const formattedText = replaceSlackEmojis(input);
+      const formattedText = formatSlackToDropbox(input);
 
       navigator.clipboard.writeText(formattedText).then(() => {
         const notification = document.getElementById("notification");
+        notification.textContent = "Formatted text copied to clipboard!";
         notification.classList.remove("hidden");
         setTimeout(() => notification.classList.add("hidden"), 2000);
       }).catch(console.error);
